# Payment-Verifier

./: .gitignore  README.md  alembic.ini  package-lock.json  package.json  payment-verifier  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: lint.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_projects_table.py  0002_create_request_logs_table.py  0003_add_customer_fields.py  0004_add_contacts_and_notes.py  0005_add_status_messages.py  0006_status_messages_per_project.py  0007_add_last_queried_at.py  0008_add_user_authentication.py  0009_add_user_name.py
control/: build.sh  deploy.sh  docker.sh  enter.sh  helpers.sh
docker/: Dockerfile  docker-compose-server.yml  docker-compose.yml
docker/data/: .env_local  .env_prod
payment_verifier/: __init__.py
payment_verifier/api/: __init__.py  dependencies.py
payment_verifier/api/routes/: __init__.py  admin.py  auth.py  health.py  logs.py  projects.py  verification.py
payment_verifier/api/schemas/: __init__.py  auth.py  common.py  log.py  project.py
payment_verifier/database/: __init__.py  connection.py
payment_verifier/database/models/: __init__.py  project.py  project_note.py  request_log.py  status_message.py  user.py
payment_verifier/static/: manifest.json  sw.js
payment_verifier/static/assets/css/: admin.css  main.css
payment_verifier/static/assets/js/: admin.js  password-utils.js
payment_verifier/static/ts/: app.ts  state.ts  types.ts
payment_verifier/static/ts/core/: api.ts  auth.ts  password.ts  ui.ts  utils.ts
payment_verifier/static/ts/sections/: logs.ts  messages.ts  projects.ts
payment_verifier/templates/: admin.html  main.html
payment_verifier/templates/partials/: auth.html  footer.html  header.html  modals.html
payment_verifier/utilities/: __init__.py  auth.py  ip_utils.py  lifespan.py  rate_limit.py  settings.py
tests/: __init__.py  conftest.py
tests/api/: test_admin.py  test_logs.py  test_notes.py  test_project_messages.py  test_projects.py  test_status_messages.py  test_verification.py
tests/models/: __init__.py  test_project.py  test_project_note.py  test_request_log.py  test_status_message.py
tests/static/: setup.ts  state.test.ts
tests/static/core/: api.test.ts  auth.test.ts  password.test.ts  ui.test.ts  utils.test.ts
tests/static/sections/: logs.test.ts  messages.test.ts  projects.test.ts
tests/utilities/: __init__.py  test_auth.py
