[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-verifier"
version = "1.0.0"
description = "Service for verifying project payment status."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "bcrypt>=5.0.0",
    "pydantic[email]>=2.0.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["payment_verifier*"]

[tool.setuptools.package-data]
payment_verifier = ["static/**/*", "templates/**/*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # assert used (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["payment_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["payment_verifier"]
exclude = ["alembic", "tests"]
